--- a/adm_calendar.html
+++ b/adm_calendar.html
@@ -148,7 +148,7 @@
                 headerToolbar: {
                     left: 'prev,next today',
                     center: 'title',
-                    right: 'dayGridMonth,timeGridWeek'
+                    right: 'dayGridMonth'
                 },
                 navLinks: false, // can click day/week names to navigate views
                 selectable: true,
