--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </ul>
                 <div class="userHead">
                     <a href="./message.html"><img class="msgImg" src="./source/msg.png"></a>
-                    <a href="./Mypage_mysetting.html"><img class="userImg" src="./source/profImg2.jpg"></a>
+                    <a href="./Mypage_mymain.html"><img class="userImg" src="./source/profImg2.jpg"></a>
                     <ul class="userList">
                         <li>유저 닉네임</li>
                         <li><a href="./Mypage_mybill.html">마이페이지</a></li>
