링크 연결 수정
.

--- a/Community_Group.html
+++ b/Community_Group.html
@@ -33,7 +33,7 @@
             <div class="gnb">
                 <ul class="gnbTab">
                     <li>
-                        <a href="./Store.html" class="store">여행상점</a>
+                        <a href="./store.html" class="store">여행상점</a>
                     </li>
                     <li>
                         <a href="./Community_Group.html" class="community">커뮤니티</a>
@@ -53,7 +53,7 @@
         </nav>
         <div class="gnbBottom">
             <a href="./Community_Group.html" class="together">
-                <img src="./source/Group.png">
+                <img src="./source/group.png">
                 <span>동행</span>
             </a>
             <a href="./community_schedule.html" class="sche">
