--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     <ul class="userList">
                         <li>유저 닉네임</li>
                         <li><a href="./Mypage_mybill.html">마이페이지</a></li>
-                        <!-- <li><a href="./adm_calendar.html">관리자 일정</a></li> -->
-                        <li>로그아웃</li>
+                        <li><a href="./adm_calendar.html">관리자 일정</a></li>
+                        <li><a href="./login.html"></a>로그아웃</li>
                     </ul>
                 </div>
             </div>
