--- a/store.html
+++ b/store.html
@@ -58,7 +58,7 @@
     <section>
         <h3>나라별 여행지</h3>
         <div class="ctryBanner">
-            <a href="./Store_list.html" class="ctry">
+            <a href="./Store_List.html" class="ctry">
                 <img src="./source/cG_bg10.jpg" class="ctryBg">
                 <div class="ctryTxt">
                     <h4>대만</h4>
@@ -66,7 +66,7 @@
                 </div>
             </a>
 
-            <a href="./Store_list.html" class="ctry">
+            <a href="./Store_List.html" class="ctry">
                 <img src="./source/cG_bg9.jpg" class="ctryBg">
                 <div class="ctryTxt">
                     <h4>홍콩</h4>
@@ -74,7 +74,7 @@
                 </div>
             </a>
 
-            <a href="./Store_list.html" class="ctry">
+            <a href="./Store_List.html" class="ctry">
                 <img src="./source/cG_bg7.jpg" class="ctryBg">
                 <div class="ctryTxt">
                     <h4>대만</h4>
@@ -82,7 +82,7 @@
                 </div>
             </a>
 
-            <a href="./Store_list.html" class="ctry">
+            <a href="./Store_List.html" class="ctry">
                 <img src="./source/cG_bg13.jpg" class="ctryBg">
                 <div class="ctryTxt">
                     <h4>마카오</h4>
@@ -90,7 +90,7 @@
                 </div>
             </a>
 
-            <a href="./Store_list.html" class="ctry">
+            <a href="./Store_List.html" class="ctry">
                 <img src="./source/cG_bg10.jpg" class="ctryBg">
                 <div class="ctryTxt">
                     <h4>일본</h4>
@@ -98,7 +98,7 @@
                 </div>
             </a>
 
-            <a href="./Store_list.html" class="ctry">
+            <a href="./Store_List.html" class="ctry">
                 <img src="./source/cG_bg2.jpg" class="ctryBg">
                 <div class="ctryTxt">
                     <h4>베트남</h4>
@@ -106,7 +106,7 @@
                 </div>
             </a>
 
-            <a href="./Store_list.html" class="ctry">
+            <a href="./Store_List.html" class="ctry">
                 <img src="./source/cG_bg12.jpg" class="ctryBg">
                 <div class="ctryTxt">
                     <h4>방콕</h4>
