--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
                 </ul>
                 <div class="account">
                     <a href="./login.html">로그인</a>
-                    <a href="./register.html">회원가입</a>
+                    <!-- <a href="./register.html">회원가입</a> -->
                 </div>
             </div>
         </nav>
