--- a/Community_Group.html
+++ b/Community_Group.html
@@ -44,9 +44,9 @@
                     <a href="./Mypage_mymain.html"><img class="userImg" src="./source/profImg2.jpg"></a>
                     <ul class="userList">
                         <li>유저 닉네임</li>
-                        <li><a href="./Community_Group.html">마이페이지</a></li>
+                        <li><a href="./Mypage_mymain.html">마이페이지</a></li>
                         <li><a href="./adm_calendar.html">관리자 일정</a></li>
-                        <li>로그아웃</li>
+                        <li><a href="./login.html">로그아웃</a></li>
                     </ul>
                 </div>
             </div>
