--- a/Community_WriteGro.html
+++ b/Community_WriteGro.html
@@ -45,11 +45,12 @@
                 </ul>
                 <div class="userHead">
                     <a href="./message.html"><img class="msgImg" src="./source/msg.png"></a>
-                    <a href="./Mypage_mysetting.html"><img class="userImg" src="./source/profImg2.jpg"></a>
+                    <a href="./Mypage_mymain.html"><img class="userImg" src="./source/profImg2.jpg"></a>
                     <ul class="userList">
                         <li>유저 닉네임</li>
-                        <li>마이페이지</li>
-                        <li>로그아웃</li>
+                        <li><a href="./Mypage_mymain.html">마이페이지</a></li>
+                        <li><a href="./adm_calendar.html">관리자 일정</a></li>
+                        <li><a href="./login.html">로그아웃</a></li>
                     </ul>
                 </div>
             </div>
