--- a/store_posting.html
+++ b/store_posting.html
@@ -38,7 +38,7 @@
             <div class="gnb">
                 <ul class="gnbTab">
                     <li>
-                        <a href="./Store" class="store">여행상점</a>
+                        <a href="./store.html" class="store">여행상점</a>
                     </li>
                     <li>
                         <a href="./Community_Group.html" class="community">커뮤니티</a>
@@ -51,7 +51,7 @@
                         <li>유저 닉네임</li>
                         <!-- <li><a href="./Community_Group.html">마이페이지</a></li> -->
                         <li><a href="./adm_calendar.html">관리자 일정</a></li>
-                        <li>로그아웃</li>
+                        <li><a href="./login.html">로그아웃</a></li>
                     </ul>
                 </div>
             </div>
