--- a/Store_List.html
+++ b/Store_List.html
@@ -33,7 +33,7 @@
             <div class="gnb">
                 <ul class="gnbTab">
                     <li>
-                        <a href="./Store.html"  class="store">여행상점</a>
+                        <a href="./store.html"  class="store">여행상점</a>
                     </li>
                     <li>
                         <a href="./Community_Group.html"  class="community">커뮤니티</a>
@@ -41,12 +41,12 @@
                 </ul>
                 <div class="userHead">
                     <a href="./message.html"><img class="msgImg" src="./source/msg.png"></a>
-                    <a href="./Mypage_mysetting.html"><img class="userImg" src="./source/profImg2.jpg"></a>
+                    <a href="./Mypage_mymain.html"><img class="userImg" src="./source/profImg2.jpg"></a>
                     <ul class="userList">
                         <li>유저 닉네임</li>
-                        <li><a href="./Community_Group.html">마이페이지</a></li>
+                        <li><a href="./Mypage_mymain.html">마이페이지</a></li>
                         <li><a href="./adm_calendar.html">관리자 일정</a></li>
-                        <li>로그아웃</li>
+                        <li><a href="./login.html">로그아웃</a></li>
                     </ul>
                 </div>
             </div>
