--- a/Store_Pay.html
+++ b/Store_Pay.html
@@ -46,7 +46,7 @@
                         <li>유저 닉네임</li>
                         <li><a href="./Community_Group.html">마이페이지</a></li>
                         <li><a href="./adm_calendar.html">관리자 일정</a></li>
-                        <li>로그아웃</li>
+                        <li><a href="./login.html">로그아웃</a></li>
                     </ul>
                 </div>
             </div>
