--- a/Store_List.html
+++ b/Store_List.html
@@ -68,7 +68,7 @@
                 <input type="checkbox" class="sortBtn" id="sort" value="">
                 <label for="sort">조회순</label>
             </div>
-            <a href="./Store_Posting.html" class="postBtn">상품 작성하기</a>
+            <a href="./store_posting.html" class="postBtn">상품 작성하기</a>
         </div>
 
         <!--
