--- a/Community_GroDetail.html
+++ b/Community_GroDetail.html
@@ -23,6 +23,7 @@
 
     <link href="./css/headFoot.css" rel="stylesheet">
     <link href="./css/cGroDetail.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
 </head>
 
 <body>
@@ -40,7 +41,7 @@
                 </ul>
                 <div class="userHead">
                     <a href="./message.html"><img class="msgImg" src="./source/msg.png"></a>
-                    <a href="./Mypage_mysetting.html"><img class="userImg" src="./source/profImg2.jpg"></a>
+                    <a href="./Mypage_mymain.html"><img class="userImg" src="./source/profImg2.jpg"></a>
                     <ul class="userList">
                         <li>유저 닉네임</li>
                         <li><a href="./Mypage_mymain.html">마이페이지</a></li>
