--- a/Community_SchDetail.html
+++ b/Community_SchDetail.html
@@ -23,6 +23,7 @@
 
     <link href="./css/headFoot.css" rel="stylesheet">
     <link href="./css/cDetail.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
 </head>
 
 <body>
