--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
         <h3 class="titleTxt"><span class="txtPple">동행</span>을 찾고 있어요</h3>
         <div class="groAll">
-            <a href="Community_GroDetail.html" class="goDetail">
+            <a href="./Community_GroDetail.html" class="goDetail">
                 <div class="schOne">
                     <div class="schTopInfo">
                         <div class="schUser">
