페이지 연결
페이지 연결 수정

--- a/Community_GroDetail.html
+++ b/Community_GroDetail.html
@@ -56,7 +56,7 @@
                 <img src="./source/group.png">
                 <span>동행</span>
             </a>
-            <a href="./Community_Schedule.html" class="sche">
+            <a href="./community_schedule.html" class="sche">
                 <img src="./source/date.png">
                 <span>일정</span>
             </a>
