--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
                         <li><a href="./login.html">로그아웃</a></li>
                     </ul>
                 </div>
+
+                <button class="menuTrigger">
+                    <span class="blind">메뉴보기</span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
             </div>
         </nav>
     </header>
