--- a/Community_Group.html
+++ b/Community_Group.html
@@ -31,24 +31,33 @@
         <nav>
             <a href="./index.html"><img class="headLogo" src="./source/logo.png"></a>
             <div class="gnb">
-                <ul class="gnbTab">
-                    <li>
-                        <a href="./store.html" class="store">여행상점</a>
-                    </li>
-                    <li>
-                        <a href="./Community_Group.html" class="community">커뮤니티</a>
-                    </li>
-                </ul>
-                <div class="userHead">
-                    <a href="./message.html"><img class="msgImg" src="./source/msg.png"></a>
-                    <a href="./Mypage_mymain.html"><img class="userImg" src="./source/profImg2.jpg"></a>
-                    <ul class="userList">
-                        <li>유저 닉네임</li>
-                        <li><a href="./Mypage_mymain.html">마이페이지</a></li>
-                        <li><a href="./adm_calendar.html">관리자 일정</a></li>
-                        <li><a href="./login.html">로그아웃</a></li>
+                <div class="gnbInner">
+                    <ul class="gnbTab">
+                        <li>
+                            <a href="./store.html" class="store">여행상점</a>
+                        </li>
+                        <li>
+                            <a href="./Community_Group.html" class="community">커뮤니티</a>
+                        </li>
                     </ul>
+                    <div class="userHead">
+                        <a href="./message.html"><img class="msgImg" src="./source/msg.png"></a>
+                        <a href="./Mypage_mymain.html"><img class="userImg" src="./source/profImg2.jpg"></a>
+                        <ul class="userList">
+                            <li>유저 닉네임</li>
+                            <li><a href="./Mypage_mymain.html">마이페이지</a></li>
+                            <li><a href="./adm_calendar.html">관리자 일정</a></li>
+                            <li><a href="./login.html">로그아웃</a></li>
+                        </ul>
+                    </div>
                 </div>
+
+                <button class="menuTrigger">
+                    <span class="blind">메뉴보기</span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
             </div>
         </nav>
         <div class="gnbBottom">
@@ -691,9 +700,51 @@
         <p>Copyright© EpicTrip, Inc. 2023. All Rights Reserved.</p>
     </footer>
 
-
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="./js/header.js"></script>
+    <script>
+        if(window.innerWidth < 768 ) {
 
+        let postBtn = document.querySelector(".postBtn");
+
+        postBtn.innerHTML = "";
+
+        let footer = document.querySelector("footer");
+        footer.insertAdjacentHTML('afterbegin', `
+        <div id="scrollTop">
+            <span class="blind">맨 위로 가기</span>
+            <div class="topTxt">Top</div>
+        </div>
+        `);
+
+        document.getElementById("scrollTop").onclick = function () {
+            window.scrollTo({
+                top: 0,
+                left: 0,
+                behavior: 'smooth'
+            });
+        };
+
+        $(document).ready(function () {
+            const Height = $("#scrollTop").height();
+            $("#scrollTop").hide();
+
+            $(window).scroll(function () {
+                var rolling = $(this).scrollTop() >= Height;
+                if (rolling) {
+                    $("#scrollTop").fadeIn(500).css({ "position": "fixed" });
+                }
+                else {
+                    $("#scrollTop").fadeOut(300);
+                }
+
+            });
+
+        });
+
+    }
+    </script>
 </body>
 
 </html>
