--- a/Community_Group.html
+++ b/Community_Group.html
@@ -691,6 +691,15 @@
             </div>
 
         -->
+        <div class="pagination">
+            <button type="button" class="prevBtn arrow"></button>
+            <button type="button" value="" class="pageNum active">1</button>
+            <button type="button" value="" class="pageNum">2</button>
+            <button type="button" value="" class="pageNum">3</button>
+            <button type="button" value="" class="pageNum">4</button>
+            <button type="button" value="" class="pageNum">5</button>
+            <button type="button" class="nextBtn arrow"></button>
+        </div>
     </section>
 
     <footer>
