--- a/Mypage_mybill.html
+++ b/Mypage_mybill.html
@@ -122,7 +122,7 @@
                         </ul>
                     </div>
                 </div>
-                
+
                 <div class="mypageCon">
                     <h1 class="mypageName">구매 내역</h1>
 
@@ -322,6 +322,18 @@
     <script src="./js/slick.min.js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/mypage.js"></script>
+    <script>
+        // ----- slider ------
+        $(document).ready(function () {
+            $('.slider').slick({
+                dots: true,
+                arrow: true,
+                infinite: false,
+                slidesToShow: 1,
+                slidesToScroll: 1,
+            });
+        });
+    </script>
 
 </body>
 
