--- a/Mypage_mysetting.html
+++ b/Mypage_mysetting.html
@@ -213,7 +213,7 @@
             <div class="phoneWrap mypaModal">
                 <div class="myMp">
                     <div class="phoneModal">
-                        <p class="modalname">전화번호 변경</p>
+                        <p class="modalname">핸드폰 번호 변경</p>
                         <div class="phoneInput">
                             <input type="number" value="" id="idPnum" name="pNum" placeholder="휴대폰 번호 (-없이 입력해주세요)"
                                 onfocus="this.placeholder=''" onblur="this.placeholder='휴대폰 번호 (-없이 입력해주세요)'">
