--- a/Mypage_mycal.html
+++ b/Mypage_mycal.html
@@ -414,6 +414,14 @@
                 slidesToScroll: 1,
             });
         });
+
+        $(window).on('load resize', function () {
+            if ($(window).width() < 768) {
+                $('.slider').slick('unslick');
+            } else {
+                $('.slider').not('.slick-initialized').slick(slickOptions);
+            }
+        });
     </script>
 
 </body>
