--- a/Mypage_mymain.html
+++ b/Mypage_mymain.html
@@ -130,25 +130,25 @@
                         <div class="mmnow">
                             <h1>hyewon01님의 현황</h1>
                             <div class="mmnowbox">
-                                <div class="mmnowMycon">
+                                <a href="./Mypage_mywish.html" class="mmnowMycon">
                                     <span>5</span>
                                     <p>좋아요</p>
-                                </div>
+                                </a>
                                 <div class="mmLine"></div>
-                                <div class="mmnowMycon">
+                                <a href="./Mypage_mygroup.html" class="mmnowMycon">
                                     <span>1</span>
                                     <p>동행 글</p>
-                                </div>
+                                </a>
                                 <div class="mmLine"></div>
-                                <div class="mmnowMycon">
+                                <a href="./Mypage_mycal.html" class="mmnowMycon">
                                     <span>1</span>
                                     <p>일정 글</p>
-                                </div>
+                                </a>
                                 <div class="mmLine"></div>
-                                <div class="mmnowMycon">
+                                <a href="./Mypage_myreview.html" class="mmnowMycon">
                                     <span>3</span>
                                     <p>후기 글</p>
-                                </div>
+                                </a>
                             </div>
                             <div class="mmforyou">
                                 <h2>매너있는 동행자가 아름답습니다.</h2>
