--- a/Mypage_mymain.html
+++ b/Mypage_mymain.html
@@ -169,7 +169,7 @@
                             </div>
                             <div class="gionement">
                                 <p>매너 제도</p>
-                                <h1 class="mguideh1">믿을만한 <br> 동행자와 함께 여행을..</h1>
+                                <h1 class="mguideh1">믿을만한 동행자와 함께 여행을..</h1>
                                 <p class="mguidep">동행자의 매너 등급을 통해 안전하고 즐거운 여행을 경험해 보세요.</p>
                             </div>
                         </div>
