--- a/Mypage_mybill.html
+++ b/Mypage_mybill.html
@@ -303,6 +303,8 @@
 
                     </div>
 
+
+
                 </div>
             </div>
         </div>
@@ -332,13 +334,47 @@
                 slidesToShow: 1,
                 slidesToScroll: 1,
             });
-        });
 
-        $(window).on('load resize', function () {
-            if ($(window).width() < 768) {
-                $('.slider').slick('unslick');
-            } else {
-                $('.slider').not('.slick-initialized').slick(slickOptions);
+            $(window).on('load resize', function () {
+                if ($(window).width() < 768) {
+                    $('.slider').slick('unslick');
+
+                } else {
+                    $('.slider').not('.slick-initialized').slick(slickOptions);
+                }
+            });
+
+
+            // --------------- post more -------------------
+            if (window.innerWidth < 768) {
+                // 버튼 생성
+                let mypageCon = document.querySelector(".mypageCon");
+
+                mypageCon.insertAdjacentHTML('beforeend', `
+                <button class="morePost">더보기</button>
+                `);
+
+                // 클릭 시 더 불러오기
+                let morePost = document.querySelector(".morePost");
+                
+                morePost.onclick = function () {
+                    load('.slider', '3', $(".morePost"));
+                }
+                
+                function load(id, cnt, btn) {
+                    let plist = id + " .itemOne:not(.active)";
+                    let plength = $(plist).length;
+                    let postTotal;
+                    if (cnt < plength) {
+                        postTotal = cnt;
+                    } else {
+                        postTotal = plength;
+                        $(btn).hide();
+                    }
+                    $(plist + ":lt(" + postTotal + ")").addClass("active");
+                }
+                // 기본 콘텐츠 3개 노출
+                load('.slider', '3');
             }
         });
 
