--- a/message.html
+++ b/message.html
@@ -280,12 +280,10 @@
                                 <div class="ansprof">
                                     <img src="./source/profImg1.jpg" alt="">
                                 </div>
-                                <div class=".chatCom">
+                                <div class="chatCom">
                                     <p>신혜원</p>
                                     <p class="ansInner">
-                                        <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit in aliquid
-                                            quisquam laudantium quia voluptate possimus cumque nesciunt rerum maiores
-                                            aliquam deserunt soluta, error facere nihil minus eius at sint.</span>
+                                        <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</span>
                                     </p>
                                 </div>
                                 <p class="sendDate">오후 5:24</p>
@@ -295,7 +293,7 @@
                                 <div class="mychatTime">
                                     <p class="sendDate">오후 5:30</p>
                                 </div>
-                                <div class=".chatCom">
+                                <div class="chatCom">
                                     <p class="mychatInner">
                                         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
                                     </p>
@@ -306,7 +304,7 @@
                                 <div class="mychatTime">
                                     <p class="sendDate">오후 5:30</p>
                                 </div>
-                                <div class=".chatCom">
+                                <div class="chatCom">
                                     <p class="mychatInner">
                                         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
                                     </p>
@@ -317,7 +315,7 @@
                                 <div class="mychatTime">
                                     <p class="sendDate">오후 5:30</p>
                                 </div>
-                                <div class=".chatCom">
+                                <div class="chatCom">
                                     <p class="mychatInner">
                                         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
                                     </p>
@@ -330,12 +328,11 @@
                                 <div class="ansprof">
                                     <img src="./source/profImg1.jpg" alt="">
                                 </div>
-                                <div class=".chatCom">
+                                <div class="chatCom">
                                     <p>신혜원</p>
                                     <p class="ansInner">
                                         <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit in aliquid
-                                            quisquam laudantium quia voluptate possimus cumque nesciunt rerum maiores
-                                            aliquam deserunt soluta, error facere nihil minus eius at sint.</span>
+                                            quisquam laudantium quia voluptate possimus</span>
                                     </p>
                                 </div>
                                 <p class="sendDate">오후 5:24</p>
@@ -347,7 +344,7 @@
                                 <div class="ansprof">
                                     <img src="./source/profImg1.jpg" alt="">
                                 </div>
-                                <div class=".chatCom">
+                                <div class="chatCom">
                                     <p>신혜원</p>
                                     <p class="ansInner">
                                         <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit in aliquid
@@ -361,7 +358,7 @@
                                 <div class="ansprof">
                                     <img src="./source/profImg1.jpg" alt="">
                                 </div>
-                                <div class=".chatCom">
+                                <div class="chatCom">
                                     <p>신혜원</p>
                                     <p class="ansInner">
                                         <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit in aliquid
@@ -379,7 +376,7 @@
             </div>
         </div>
         <div class="sendflex">
-            <div></div>
+            <!-- <div></div> -->
             <div class="sendMs">
                 <textarea placeholder="메세지를 입력해주세요." class="msArea" id="messageTextarea"></textarea>
                 <button class="sendBtn" id="sendButton"></button>
